clusters/main/calico/net-allow-elasticsearch.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-elastic
  namespace: monitoring
spec:
  podSelector: 
    matchLabels:
      app: elasticsearch-master
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      destination:
        services:
          name: elasticsearch-master
    - action: Allow
      destination:
        services:
          name: elasticsearch-master-headless
  egress:
    - action: Allow
